--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <title>Web Portfolio</title>
 </head>
 <body>
-    <h1>For: Gaby</h1>
-    <p>I love U</p>
-    <hr>
-    <p>Eres lo más lindo que me ha pasado en este 2022, super orgulloso de ti <br>
-    y de todo lo que has logrado.</p>
-
+    <h1>WEBSITE RUNNING....</h1>
     <script src="src/js/main.js"></script>
 </body>
 </html>
